<resources>
    <string name="app_name">Loja</string>
    <string name="bt_logar">Entrar</string>
    <string name="content_description_logo_da_empresa">logo da empresa</string>
    <string name="hint_email_login">email</string>
    <string name="hint_senha_login">senha</string>
    <string name="tv_esqueceu_senha_login">Esqueceu sua senha?</string>
    <string name="toast_preencher_todos_campos">Você deve preencher todos os campos.</string>
    <string name="toast_falha_autenticacao">Falha na autenticação.</string>
    <string name="msg_invalido">Inválido</string>
    <string name="snack_problem_autenticacao">Problemas na autenticação.</string>
    <string name="snack_operacao_cancelada">Operação cancelada.</string>
    <string name="alert_title_atencao">Atenção</string>
    <string name="alert_message_email_recover">Um email de recuperação de senha será enviado para:</string>
    <string name="alert_sim">Sim</string>
    <string name="alert_nao">Não</string>
    <string name="snack_email_enviado">Email de recuperação eviado para</string>
    <string name="hint_estoque">000</string>
    <string name="hint_nome_produto">Nome do produto</string>
    <string name="contentDescription_nome_produto">foto do produto</string>
    <string name="hint_valor_produto">R$ 00,00</string>
    <string name="foto_do_cliente">Foto do cliente</string>
    <string name="hint_nome_cliente"> Nome do cliente </string>
    <string name="hint_cpf_cliente"> 000.000.000-19 </string>
    <string name="password_fail"> Senha inválida  </string>
    <string name="email_fail"> Email inválido </string>
    <string name="input_error_invalido"> Inválido </string>
    <string name="foto_do_produto"> Foto do Produto </string>
    <string name="bt_vender"> Vender </string>
    <string name="hint_descricao_produto"> Descrição do Produto </string>
    <string name="hint_quantos"> Quantos </string>
    <string name="hint_vendedor"> vendedor@email.com </string>
    <string name="snack_insira_quantidade">Insira a quantidade</string>
    <string name="snack_qde_insuficiente">Estoque insuficiente</string>
    <string name="titulo_cliente_selecionado">Confirmar esta seleção?</string>
    <string name="toast_cliente_selecionado">Cliente selecionado.</string>
    <string name="bt_cadastro">Cadastrar</string>
    <string name="hint_nome_signup">Nome</string>
    <string name="hint_sobrenome_signup">Sobrenome</string>
    <string name="hint_funcao_signup">Função</string>
    <string name="hint_login_signup">E-mail</string>
    <string name="hint_senha_signup">Senha</string>
    <string name="menu_limparform" />
    <string name="menu_cancelar"> Cancelar </string>
    <string name="menu_vender"> Vender </string>
    <string name="menu_nav_carrinho" />
    <string name="menu_nav_lista_de_clientes" />
    <string name="menu_nav_produto_admin" />
    <string name="menu_nav_cliente_admin" />
    <string name="menu_nav_usuario" />
    <string name="menu_nav_sobre" />
    <string name="menu_nav_sair" />
    <string name="menu_pesquisar">pesquisar</string>
    <string name="menu_lercodigodebarras">Ler código de barras</string>
    <string name="hint_total_item" > R$ 0,00 </string>
    <string name="hint_quantidade"> 100 </string>
    <string name="nome_do_cliente_carrinho" />
    <string name="total_pedido_carrinho" />
    <string-array name="function_arrays">
        <item>Administrador</item>
        <item>Vendedor</item>
    </string-array>
    <string name="text_nome">nome</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="label_codigo_de_barras">Código De Barras</string>
    <string name="hint_codigo_de_barras">Utilize o leitor ou digite</string>
    <string name="snack_codigo_barras_nao_cadastrado">Código de barras não cadastrado.</string>
    <string name="title_modal_atencao">Atenção</string>
    <string name="message_modal_sair">Tem produtos no carrinho. Se você sair do aplicativo irá perder a venda.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="default_notification_channel_id" />
    <string name="FCM">Notificacao</string>
</resources>
