<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_activity_detalhe_produto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.ProdutoDetalheActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imvFoto"
        android:layout_width="146dp"
        android:layout_height="145dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="58dp"
        android:contentDescription="@string/foto_do_produto"
        app:layout_constraintBottom_toBottomOf="@+id/tvQuantidadeProduto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvNomeProduto"
        app:srcCompat="@drawable/img_carrinho_de_compras" />

    <TextView
        android:id="@+id/tvValorProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/roboto"
        android:gravity="left"
        android:hint="@string/hint_valor_produto"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDerscricaoProduto"
        app:layout_constraintStart_toStartOf="@+id/tvNomeProduto" />

    <TextView
        android:id="@+id/tvQuantidadeProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:gravity="right"
        android:hint="@string/hint_estoque"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvNomeProduto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNomeProduto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="left"
        android:hint="@string/hint_nome_produto"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btComprarProduto"
        android:layout_width="142dp"
        android:layout_height="57dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/bt_vender"
        android:textColor="@color/font_white"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/etQuantidade"
        app:layout_constraintStart_toStartOf="@+id/tvDerscricaoProduto" />

    <TextView
        android:id="@+id/tvDerscricaoProduto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="21dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_descricao_produto"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btComprarProduto"
        app:layout_constraintEnd_toEndOf="@+id/tvQuantidadeProduto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvValorProduto"
        app:layout_constraintTop_toBottomOf="@+id/tvQuantidadeProduto"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etQuantidade"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="66dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:hint="@string/hint_quantos"
        android:inputType="numberSigned"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvDerscricaoProduto"
        app:layout_constraintStart_toEndOf="@+id/btComprarProduto" />

    <TextView
        android:id="@+id/tvVendedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_vendedor"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pb_foto_produto_detalhe"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imvFoto"
        app:layout_constraintEnd_toEndOf="@+id/imvFoto"
        app:layout_constraintStart_toStartOf="@+id/imvFoto"
        app:layout_constraintTop_toTopOf="@+id/imvFoto" />
</android.support.constraint.ConstraintLayout>