<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardCornerRadius="4dp"
        android:background="@android:color/transparent"
        app:cardElevation="4dp"
        app:cardMaxElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvEstoqueProdutoAdapater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="end"
                android:hint="@string/hint_estoque"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNomeProdutoAdapter" />

            <TextView
                android:id="@+id/tvNomeProdutoAdapter"
                android:layout_width="258dp"
                android:layout_height="25dp"
                android:layout_gravity="start"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/hint_nome_produto"
                android:textColorHint="#000000"
                android:textFontWeight="700"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imvFotoProdutoAdapter" />

            <ImageView
                android:id="@+id/imvFotoProdutoAdapter"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/contentDescription_nome_produto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/img_carrinho_de_compras" />

            <TextView
                android:id="@+id/tvValorProdutoItemAdapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/hint_valor_produto"
                android:textColor="#00B31414"
                android:textColorHighlight="#00441919"
                android:textColorHint="#016F2C"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/tvNomeProdutoAdapter"
                app:layout_constraintTop_toBottomOf="@+id/tvNomeProdutoAdapter" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.constraint.ConstraintLayout>